wip: add more controllers and create common util functions

--- a/.denonrc.json
+++ b/.denonrc.json
@@ -9,6 +9,7 @@
     "deno_args": [
         "--allow-read",
         "--allow-net",
-        "--allow-env"
+        "--allow-env",
+        "--unstable"
     ]
 }
